examples/test/testpolicy1728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1728
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key4: value14
      key46: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value49
          key32: value4
          key16: value8
      podSelector:
        matchLabels:
          key11: value49
          key18: value1
          key35: value8
